<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="tab_bio">Biology</string>
    <string name="tab_chem">Chemistry</string>
    <string name="tab_phys">Physics</string>
    <string name="concentration_equation">Concentration Equation</string>
    <string name="init_conc">Initial Concentration (Molar)</string>
    <string name="init_vol">Initial Volume (Liters)</string>
    <string name="fin_conc">Final Concentration (Molar)</string>
    <string name="fin_vol">Final Volume (Liters)</string>
    <string name="conc_btn">Calculate</string>
    <string name="hw_eq">Hardy Weinberg Equation</string>
    <string name="p">Frequency of Dominant Allele (p)</string>
    <string name="q">Frequency of Recessive Allele (q)</string>
    <string name="ig_eq">Ideal Gas Equation</string>
    <string name="pressure">P: Pressure (atm)</string>
    <string name="volume">V: Volume (liters)</string>
    <string name="moles">n: # of Moles (mol)</string>
    <string name="temp_k">T: Temperature (kelvin)</string>
    <string name="ig_btn">Calculate</string>
    <string name="density_eq">Density Equation</string>
    <string name="den_gcm3">d: density (g/cm3)</string>
    <string name="mass_g">m: mass (g)</string>
    <string name="v_volume_cm3">V: volume (cm3)</string>
    <string name="calculate_den">Calculate</string>
    <string name="motion_equation">Motion Equation</string>
    <string name="f_force_n">F: force (N)</string>
    <string name="m_mass_of_object_kg">m: mass of object (kg)</string>
    <string name="a_acceleration_of_object_m_s2">a: acceleration of object (m/s2)</string>
    <string name="gravitation_equation">Gravitation Equation</string>
    <string name="f_force_between_objects_n">F: force between objects (N)</string>
    <string name="first_mass_kg">first mass (kg)</string>
    <string name="second_mass_kg">second mass (kg)</string>
    <string name="r_radius_of_distance_between_masses_m">r: radius of distance between masses (m)</string>
    <string name="calculate">Calculate</string>
</resources>
